Refactore of order module
