# pkg/ordine/structs.go
@@ -1,7 +1,7 @@
 package ordine
 
 import (
-	"ordine-api/pkg/product"
+	"ordine-api/pkg/ordine/order"
 	"time"
 )
 
@@ -11,28 +11,12 @@ type OrdineRequestBody struct {
 	Status     bool   `json:"status" bson:"status" binding:"required"`
 }
 type Ordine struct {
-	ID         uint            `json:"id" bson:"id" gorm:"primaryKey"`
-	CreatedAt  time.Time       `json:"created_at" bson:"created_at"`
-	UpdatedAt  time.Time       `json:"updated_at" bson:"updated_at"`
-	DeletedAt  *time.Time      `json:"deleted_at,omitempty" bson:"deleted_at,omitempty"`
-	Table      int             `json:"table" bson:"tables"`
-	ClientName string          `json:"client_name" bson:"client_name"`
-	Status     bool            `json:"status" bson:"status"`
-	Products   []OrderProducts `json:"ordine_products" gorm:"foreignKey:OrdineID" bson:"products,omitempty"`
-}
-
-type OrderProducts struct {
-	ID        uint            `json:"id" bson:"id"`
-	CreatedAt time.Time       `json:"created_at" bson:"created_at"`
-	UpdatedAt time.Time       `json:"updated_at" bson:"updated_at"`
-	DeletedAt *time.Time      `json:"deleted_at,omitempty" bson:"deleted_at,omitempty"`
-	OrdineID  uint            `json:"ordine_id" bson:"ordine_id"`
-	ProductID uint            `json:"product_id" bson:"product_id"`
-	Quantity  int             `json:"quantity" bson:"quantity"`
-	Product   product.Product `gorm:"foreignKey:ProductID" json:"product" bson:"product,omitempty"`
-}
-
-type OrderProductBody struct {
-	ProductID int `json:"product_id"`
-	Quantity  int `json:"quantity"`
+	ID         uint                  `json:"id" bson:"id" gorm:"primaryKey"`
+	CreatedAt  time.Time             `json:"created_at" bson:"created_at"`
+	UpdatedAt  time.Time             `json:"updated_at" bson:"updated_at"`
+	DeletedAt  *time.Time            `json:"deleted_at,omitempty" bson:"deleted_at,omitempty"`
+	Table      int                   `json:"table" bson:"tables"`
+	ClientName string                `json:"client_name" bson:"client_name"`
+	Status     bool                  `json:"status" bson:"status"`
+	Products   []order.OrderProducts `json:"ordine_products" gorm:"foreignKey:OrdineID" bson:"products,omitempty"`
 }
